--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     text-decoration: none;
     list-style: none;
 }
-/*
+
 
 @media screen and (max-width: 575px ){
 
@@ -533,7 +533,7 @@ transition: all 0.3s linear;
     }
 
 }
-*/
+
 @media screen and (min-width: 1200px) {
     body{
         background-color:#1D1D1E;
@@ -699,7 +699,7 @@ transition: all 0.3s linear;
         width: 334;
         height: 427px;
         cursor: pointer;
-        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
+        box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.2);
         
     }
     .poster:hover{
@@ -726,12 +726,12 @@ transition: all 0.3s linear;
         font-size: .8em;
         font-family: 'Quicksand', sans-serif;
         padding: 0px 15px;
-        filter: brightness(80%);
+        filter: brightness(100%);
         cursor: pointer;
     }
 
     .btns button:hover{
-        filter: brightness(100%);
+        filter: brightness(80%);
         color:black;
         transition: all .3s linear;
         
@@ -741,16 +741,16 @@ transition: all 0.3s linear;
         width: auto;
         height: 10vh;
         margin-top: 50px;
-        background-color: #1D1D1E;
+        border-top: white 1px solid;
     }
 
     .footer_containerColor{
         width: auto;
         height: 10vh;
         margin-top: 50px;
-        background-color: white;
         color: black;
-        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+        border-top: black 1px solid;
+        
     }
 
     .copyright{
