--- a/style.css
+++ b/style.css
@@ -9,9 +9,14 @@
 @media screen and (max-width: 575px ){
 
     body{
-        background-color:#1D1D1E;
+        background-color:#282829;
+    }
+
+    .bodyColor{
+        background-color: white;
     }
     .ShowandHiddeCards{
+        margin: auto;
         display: block;
     }
 
@@ -27,40 +32,52 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        margin: 20px 0;
+        margin: 20px 20px;
+       
+       }
+       .showMovieInfContainerColor{
+        color: #1D1D1E;
        }
 
        .imgContainer{
-        margin: 10px auto;
-        overflow: hidden;
-        border-radius: 20px;
-        width: 90%;
-        box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
-           
+        margin-top: 35px;
+        width: 100%;
+       }
+
+       .imgContainer img{
+        border-radius: 15px;
        }
        .infContainer{
         display: flex;
+        flex-direction: column;
         justify-content: start;
         justify-items: start;
-        margin: auto;
+        font-family: 'Quicksand', sans-serif
        }
+
        .date{
         margin-right:15px;
        }
 
        .reviewContainer{
-        width: 80%;
+        width: 100%;
         margin: 10px auto;
+        font-family: 'Quicksand', sans-serif
+       }
+       .reviewContainer strong{
+        color: aqua;
        }
 
-       .reviewContainer h1{
-        font-family: 'Montserrat', sans-serif
+       .infContainer h1{
+        margin: 10px 0;
+        font-family: 'Montserrat', sans-serif;
+        font-size:18px;
        }
        
 
        .trailerContainer{
         margin:  10px auto;
-        width: 90%;
+        width: 100%;
         height: 200px;
         border-radius: 20px;
         overflow: hidden;
@@ -69,8 +86,8 @@
         position: absolute;
         right: 0;
         top: 0;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         z-index: 10;
         display: none;
        }
@@ -91,15 +108,15 @@
 .nav-logo{
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
-    font-size: 2.5em;
+    font-size: 2em;
     z-index: 1;
     cursor: pointer;
-
+}
+.nav-logoColor{
+    color: #1D1D1E;
 }
 
 .hero{
-    background-color: #1D1D1E;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 12vh;
 }
@@ -119,8 +136,17 @@
     grid-row: 1/2;
 }
 .nav-burger{
-    z-index: 30;
+    z-index: 40;
+}
+.nav-burger img{
+    margin: auto;
+    z-index: 60;
     filter: brightness(0) invert(1);
+    width: 30px;
+    height: 30px;
+}
+.navBurgerColor{
+    filter: invert(100%);
 }
 
 .show-burger{
@@ -153,7 +179,7 @@
     text-align: center;
     font-size: 30px;
     gap: 20px;
-    z-index: 20;
+    z-index: 10;
 }
 ul{
     display: grid;
@@ -176,15 +202,16 @@ input{
 }
 
 h3{
-    font-size: 20px;
+    font-size: 18px;
     color: white;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     padding: 10px 0;
+    font-weight: 600;
 }
 .btn {
     height: 4vh;
-    background-color: skyblue;
+    background-color: rgb(110, 202, 238);
     color: white;
     border: none;
     border-radius: 5px;
@@ -216,6 +243,9 @@ transition: all 0.3s linear;
 
     
 }
+.subTittleColor{
+    color: #1D1D1E;
+}
 
 .main_container{
     margin: 30px auto;
@@ -223,16 +253,16 @@ transition: all 0.3s linear;
     justify-content: center;
     grid-template-columns: repeat(1, max-content);
     grid-template-rows: auto;
-    gap: 15px;
+    gap: 25px;
     padding: auto;
 }
 
 .poster{
-    border-radius: 5px;
-    width: 334;
-    height: 427px;
+    border-radius: 6px;
+    width: 225px;
+    height: 300px;
     cursor: pointer;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     
 }
 .poster:hover{
@@ -252,7 +282,7 @@ transition: all 0.3s linear;
     text-transform: uppercase;
     width: 80px;
     height: 4vh;
-    background-color: skyblue;
+    background-color: rgb(103, 197, 234);
     color: white;
     border: none;
     border-radius: 5px;
@@ -354,6 +384,8 @@ transition: all 0.3s linear;
         padding: 10px 0;
     }
 
+    
+
     .btn {
         height: 4vh;
         background-color: skyblue;
@@ -413,7 +445,7 @@ transition: all 0.3s linear;
         text-transform: uppercase;
         width: 80px;
         height: 4vh;
-        background-color: skyblue;
+        background-color: rgb(94, 193, 233);
         color: white;
         border: none;
         border-radius: 5px;
