--- a/style.css
+++ b/style.css
@@ -5,6 +5,142 @@
     list-style: none;
 }
 
+body{
+    background-color:#282829;
+}
+
+.bodyColor{
+    background-color: white;
+}
+.ShowandHiddeCards{
+    margin: auto;
+    display: block;
+}
+
+.pruebadeestilos{
+    display: none;
+    color: white;
+    z-index: 0;
+    max-width: 600px;
+    margin: auto;
+    height: auto;
+    
+   }
+   .showMovieInfContainer{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 20px 20px;
+   
+   }
+   .showMovieInfContainerColor{
+    color: #1D1D1E;
+   }
+
+   .imgContainer{
+    margin-top: 35px;
+    width: 100%;
+   }
+
+   .imgContainer img{
+    border-radius: 15px;
+   }
+   .infContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    justify-items: start;
+    font-family: 'Quicksand', sans-serif
+   }
+
+   .date{
+    margin-right:15px;
+   }
+
+   .reviewContainer{
+    width: 100%;
+    margin: 10px auto;
+    font-family: 'Quicksand', sans-serif
+   }
+   .reviewContainer strong{
+    color: aqua;
+   }
+
+   .infContainer h1{
+    margin: 10px 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size:18px;
+   }
+   
+
+   .trailerContainer{
+    margin:  10px auto;
+    width: 100%;
+    height: 300px;
+    border-radius: 20px;
+    overflow: hidden;
+   }
+   .closeBtn{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    z-index: 10;
+    display: none;
+   }
+
+   
+
+   .main{
+    position: relative;
+   }
+
+   .footer_container{
+    height: 30vh;
+    margin-top: 30px;
+}
+.footer_container{
+    width: auto;
+    height: 10vh;
+    margin-top: 50px;
+    border-top: white 1px solid;
+}
+
+.footer_containerColor{
+    width: auto;
+    height: 10vh;
+    margin-top: 50px;
+    color: black;
+    border-top: black 1px solid;
+    
+}
+.nav-logo{
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+    z-index: 1;
+    cursor: pointer;
+}
+.nav-logoColor{
+    color: #1D1D1E;
+}
+
+.hero{
+    width: 100%;
+    height: 12vh;
+}
+
+.nav {
+    padding: 20px 0;
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-columns: repeat(2, max-content);
+}
+
 
 @media screen and (max-width: 575px ){
 
@@ -300,6 +436,7 @@ transition: all 0.3s linear;
     
 }
 .footer_container{
+    height: 30vh;
     margin-top: 30px;
 }
 .copyright{
@@ -310,28 +447,6 @@ transition: all 0.3s linear;
     body{
         background-color:#1D1D1E;
     }
-
-    .hero{
-        background-color: #1D1D1E;
-        height: 12vh;
-        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-    }
-
-    .nav{
-        padding: 20px 0;
-        display: grid;
-        justify-content: space-around;
-        justify-content: center;
-        align-items: center;
-        grid-template-columns: repeat(3, auto);
-    }
-    .nav-logo{
-        font-size: 40px;
-        color: white;
-        font-family: 'Montserrat', sans-serif;
-    }
-    
-
     .nav-links{
         display: grid;
         justify-content: center;
@@ -477,27 +592,7 @@ transition: all 0.3s linear;
         margin: auto;
     }
 
-    .hero{
-        background-color: #1D1D1E;
-        height: 12vh;
-        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-    }
-
-    .nav{
-        padding: 20px 0;
-        display: grid;
-        justify-content: space-around;
-        justify-content: center;
-        align-items: center;
-        grid-template-columns: repeat(3, auto);
-    }
-    .nav-logo{
-        font-size: 40px;
-        color: white;
-        font-family: 'Montserrat', sans-serif;
-    }
     
-
     .nav-links{
         display: grid;
         justify-content: center;
@@ -651,36 +746,6 @@ transition: all 0.3s linear;
         
     }
 
-    .hero{
-        background-color: #1D1D1E;
-        height: 12vh;
-        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-    }
-    .heroColor{
-        background-color: white;
-        height: 12vh;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .nav{
-        padding: 20px 0;
-        display: grid;
-        justify-content: space-around;
-        justify-content: center;
-        align-items: center;
-        grid-template-columns: repeat(3, auto);
-    }
-    .nav-logo{
-        font-size: 40px;
-        color: white;
-        font-family: 'Montserrat', sans-serif;
-    }
-    .nav-logoColor{
-        font-size: 40px;
-        color: #1D1D1E;
-        font-family: 'Montserrat', sans-serif;
-    }
-    
 
     .nav-links{
         display: grid;
@@ -794,15 +859,17 @@ transition: all 0.3s linear;
         justify-content: center;
         grid-template-columns: repeat(4, max-content);
         grid-template-rows:auto;
-        gap: 25px;
+        gap: 30px;
         padding: auto;;
         
     }
+   
 
     .poster{
+        margin: auto;
         border-radius: 5px;
-        width: 334;
-        height: 427px;
+        width: 100%;
+        height: 300px;
         cursor: pointer;
         box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.2);
         
