--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 .bodyColor{
-    background-color: white;
+    background-color: rgb(234, 230, 230);
 }
 .bodyColor h3{
     color: #1D1D1E;
